add favi icons and new mwta tegs

--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <title> Ulance</title>
+  <title>ULance – Raqamli Dunyoda Sizning Ishonchli Hamkoringiz</title>
+  <link href="https://Ulance.uz/" rel="canonical">
+  <meta content="ULance – bu zamonaviy va ishonchli platforma bo‘lib, sizga IT sohasida kompleks xizmatlar taqdim etadi. Saytimizda tajribali mutaxassislar jamoasi orqali sizga yuqori sifatli veb-saytlar, web-ilovalar, va dizayn loyihalari yaratib beriladi." name="description">
+  <meta content="index, follow" name="robots">
+  <meta content="ULance – Raqamli Dunyoda Sizning Ishonchli Hamkoringiz" property="og:title">
+  <meta content="website" property="og:type">
+  <!-- <meta content="https://mohirdev.uz/images/meta.jpeg" property="og:image"> -->
+   <meta content="https://Ulance.uz/" property="og:url">
+   <meta content="ULance – bu zamonaviy va ishonchli platforma bo‘lib, sizga IT sohasida kompleks xizmatlar taqdim etadi. Saytimizda tajribali mutaxassislar jamoasi orqali sizga yuqori sifatli veb-saytlar, web-ilovalar, va dizayn loyihalari yaratib beriladi." property="og:description">
+   <meta content="ULance" property="og:site_name">
+   <meta content="ArbYdWagYsd4nKvarSmNRLswCtz9n3Ah" name="google-site-verification">
+   <meta name="yandex-verification" content="bad9094b1793561c" />
+   <link href="/favicon_io/favicon.ico" rel="icon" type="image/x-icon">
+   <link href="/favicon_io/favicon-16x16.png" rel="mask-icon" color="#3F9CFB">
+
+   <link href="/sitemap-index.xml" rel="sitemap">
 </head>
 
 <body>
